--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -116,12 +117,13 @@ img {
 /* NAVIGATION */
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  height: 9rem;
-  width: 100%;
+  height: 6rem;
   padding: 0 6rem;
   z-index: 100;
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
 }
 
 /* nav and stickly class at the same time */
@@ -143,11 +145,12 @@ img {
 
 .nav__item {
   margin-left: 4rem;
+  color: #fff;
 }
 
 .nav__link:link,
 .nav__link:visited {
-  font-size: 1.7rem;
+  font-size: 2rem;
   font-weight: 400;
   color: inherit;
   text-decoration: none;
@@ -157,7 +160,7 @@ img {
 
 .nav__link--btn:link,
 .nav__link--btn:visited {
-  padding: 0.8rem 2.5rem;
+  padding: 0.2rem 0.5rem;
   border-radius: 3rem;
   background-color: var(--color-primary);
   color: #222;
@@ -172,37 +175,40 @@ img {
 
 /* HEADER */
 .header {
-  padding: 0 3rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(img/pxfuel.jpg);
-  object-fit: cover;
+  background-image: url(img/Hiking\ image.avif);
+
+  background-size: cover;
+  background-position: center;
 }
 
 .header__title {
-  flex: 1;
-
   max-width: 115rem;
   display: grid;
-  grid-template-columns: 3fr 2fr;
   row-gap: 3rem;
+  align-self: center;
   align-content: center;
   justify-content: center;
-
   align-items: start;
   justify-items: start;
+  margin-top: 150px;
+  padding: 15px;
+  border-radius: 20px;
 }
 
 h1 {
   font-size: 5.5rem;
   line-height: 1.35;
+  color: #f9f9ed;
 }
 
 h4 {
   font-size: 2.4rem;
   font-weight: 500;
+  color: #f9f9ed;
 }
 
 .header__img {
