--- a/style.css
+++ b/style.css
@@ -466,8 +466,8 @@ h4 {
 }
 
 .dots__dot--active {
-  /* background-color: #fff; */
-  background-color: #888;
+  background-color: #fff;
+
   opacity: 1;
 }
 
