--- a/style.css
+++ b/style.css
@@ -29,17 +29,20 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
-  color: #444;
+  background-color: #071336;
   line-height: 1.9;
-  background-color: #f3f3f3;
 }
 
 /* GENERAL ELEMENTS */
 .section {
   padding: 15rem 3rem;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid black;
 
   transition: transform 1s, opacity 1s;
+}
+
+#section--1 {
+  background-color: #071336;
 }
 
 .section--hidden {
@@ -56,14 +59,17 @@ body {
   font-size: 1.8rem;
   font-weight: 600;
   text-transform: uppercase;
-  color: var(--color-primary);
+  color: #fff;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 .section__header {
   font-size: 4rem;
   line-height: 1.3;
   font-weight: 500;
+  text-align: center;
+  color: #fff;
 }
 
 .btn {
@@ -89,7 +95,7 @@ body {
   font-size: 1.7rem;
   font-family: inherit;
   font-weight: 500;
-  color: var(--color-primary);
+  color: #fff;
   border: none;
   border-bottom: 1px solid currentColor;
   padding-bottom: 2px;
@@ -101,7 +107,6 @@ p {
   color: #666;
 }
 
-/* This is BAD for accessibility! Don't do in the real world! */
 button:focus {
   outline: none;
 }
@@ -122,7 +127,7 @@ img {
   height: 6rem;
   padding: 0 6rem;
   z-index: 100;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
 }
 
@@ -160,26 +165,26 @@ img {
 
 .nav__link--btn:link,
 .nav__link--btn:visited {
-  padding: 0.2rem 0.5rem;
+  padding: 0.3rem 1rem;
   border-radius: 3rem;
-  background-color: var(--color-primary);
-  color: #222;
+  background-color: #523db8;
+  color: #fff;
+  font-size: 16px;
 }
 
 .nav__link--btn:hover,
 .nav__link--btn:active {
   color: inherit;
-  background-color: var(--color-primary-darker);
-  color: #333;
+  background-color: #333;
+  color: #fff;
 }
-
 /* HEADER */
 .header {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(img/Hiking\ image.avif);
+  background-image: url(img/Trees-space.jpg);
 
   background-size: cover;
   background-position: center;
@@ -197,6 +202,7 @@ img {
   margin-top: 150px;
   padding: 15px;
   border-radius: 20px;
+  transform: translateX(-10rem);
 }
 
 h1 {
@@ -255,29 +261,42 @@ h4 {
   font-size: 1.5rem;
 }
 
+.features__feature p {
+  color: #fff;
+  font-size: 18px;
+}
+
 .features__icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--color-primary-opacity);
+  background-color: #fff;
   height: 5.5rem;
   width: 5.5rem;
   border-radius: 50%;
   margin-bottom: 2rem;
+  color: #071336;
 }
 
 .features__icon svg {
   height: 2.5rem;
   width: 2.5rem;
-  fill: var(--color-primary);
+  fill: #071336;
 }
 
 .features__header {
   font-size: 2rem;
   margin-bottom: 1rem;
+  color: #fff;
 }
 
 /* OPERATIONS */
+
+#section--2 {
+  background-image: url(img/Purple-space.jpg);
+  background-position: center;
+  background-size: cover;
+}
 .operations {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
@@ -302,24 +321,32 @@ h4 {
 }
 
 .operations__tab--1 {
-  background-color: var(--color-secondary);
+  background-color: #d4cab0;
 }
 
 .operations__tab--1:hover {
-  background-color: var(--color-secondary-darker);
+  background-color: #aaa28d;
+}
+
+.operations__tab--2 {
+  background-color: #d4cab0;
+}
+
+.operations__tab--2:hover {
+  background-color: #aaa28d;
 }
 
 .operations__tab--3 {
-  background-color: var(--color-tertiary);
+  background-color: #d4cab0;
   margin: 0;
 }
 
 .operations__tab--3:hover {
-  background-color: var(--color-tertiary-darker);
+  background-color: #aaa28d;
 }
 
 .operations__tab--active {
-  transform: translateY(-66%);
+  transform: translateY(-80%);
 }
 
 .operations__content {
@@ -362,24 +389,60 @@ h4 {
 }
 
 .operations__icon--1 {
-  background-color: var(--color-secondary-opacity);
+  background-color: #d4cab0;
+  font-size: 23px;
 }
 .operations__icon--2 {
-  background-color: var(--color-primary-opacity);
+  background-color: #d4cab0;
+  font-size: 23px;
 }
 .operations__icon--3 {
-  background-color: var(--color-tertiary-opacity);
-}
-.operations__icon--1 svg {
-  fill: var(--color-secondary-darker);
-}
-.operations__icon--2 svg {
-  fill: var(--color-primary);
-}
-.operations__icon--3 svg {
-  fill: var(--color-tertiary);
+  background-color: #d4cab0;
+  font-size: 30px;
 }
 
+/* SIGNUP */
+.section--sign-up {
+  background-color: #37383d;
+  border-top: none;
+  border-bottom: 1px solid #444;
+  text-align: center;
+  padding: 10rem 3rem;
+}
+
+.section--sign-up .section__header {
+  color: #fff;
+  text-align: center;
+}
+
+.section--sign-up .section__title {
+  margin-bottom: 6rem;
+}
+
+.section--sign-up .btn {
+  font-size: 1.9rem;
+  padding: 2rem 5rem;
+}
+
+.search-container {
+  margin-bottom: 20px;
+}
+
+.apod-container {
+  max-width: 600px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+
+.apod-title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.apod-image {
+  max-width: 100%;
+}
 /* SLIDER */
 .slider {
   max-width: 100rem;
@@ -400,8 +463,6 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  /* THIS creates the animation! */
   transition: transform 1s;
 }
 
@@ -456,9 +517,6 @@ h4 {
   margin-right: 1.75rem;
   cursor: pointer;
   transition: all 0.5s;
-
-  /* Only necessary when overlying images */
-  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
 }
 
 .dots__dot:last-child {
@@ -529,29 +587,6 @@ h4 {
 
 .section__title--testimonials {
   margin-bottom: 4rem;
-}
-
-/* SIGNUP */
-.section--sign-up {
-  background-color: #37383d;
-  border-top: none;
-  border-bottom: 1px solid #444;
-  text-align: center;
-  padding: 10rem 3rem;
-}
-
-.section--sign-up .section__header {
-  color: #fff;
-  text-align: center;
-}
-
-.section--sign-up .section__title {
-  margin-bottom: 6rem;
-}
-
-.section--sign-up .btn {
-  font-size: 1.9rem;
-  padding: 2rem 5rem;
 }
 
 /* FOOTER */
