--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
-
 :root {
   --color-primary: #5ec576;
   --color-secondary: #ffcb03;
@@ -29,7 +27,7 @@ html {
 body {
   font-family: 'Poppins', sans-serif;
   font-weight: 300;
-  background-color: #071336;
+  background-color: #202132;
   line-height: 1.9;
 }
 
@@ -42,7 +40,7 @@ body {
 }
 
 #section--1 {
-  background-color: #071336;
+  background-color: #202132;
 }
 
 .section--hidden {
@@ -74,7 +72,7 @@ body {
 
 .btn {
   display: inline-block;
-  background-color: var(--color-primary);
+  background-color: #523db8;
   font-size: 1.6rem;
   font-family: inherit;
   font-weight: 500;
@@ -86,7 +84,7 @@ body {
 }
 
 .btn:hover {
-  background-color: var(--color-primary-darker);
+  background-color: #7564c6;
 }
 
 .btn--text {
@@ -175,7 +173,7 @@ img {
 .nav__link--btn:hover,
 .nav__link--btn:active {
   color: inherit;
-  background-color: #333;
+  background-color: #423193;
   color: #fff;
 }
 /* HEADER */
@@ -239,7 +237,7 @@ h4 {
   z-index: -1;
   opacity: 0.7;
   transform: scale(1.07, 1.05) skewX(-15deg);
-  background-image: var(--gradient-primary);
+  background-image: ;
 }
 
 /* FEATURES */
@@ -301,7 +299,7 @@ h4 {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
 
-  background-color: #fff;
+  background-color: #202132;
 }
 
 .operations__tab-container {
@@ -321,28 +319,28 @@ h4 {
 }
 
 .operations__tab--1 {
-  background-color: #d4cab0;
+  background-color: #fff;
 }
 
 .operations__tab--1:hover {
-  background-color: #aaa28d;
+  background-color: #fff;
 }
 
 .operations__tab--2 {
-  background-color: #d4cab0;
+  background-color: #fff;
 }
 
 .operations__tab--2:hover {
-  background-color: #aaa28d;
+  background-color: #fff;
 }
 
 .operations__tab--3 {
-  background-color: #d4cab0;
+  background-color: #fff;
   margin: 0;
 }
 
 .operations__tab--3:hover {
-  background-color: #aaa28d;
+  background-color: #fff;
 }
 
 .operations__tab--active {
@@ -351,8 +349,6 @@ h4 {
 
 .operations__content {
   display: none;
-
-  /* JUST PRESENTATIONAL */
   font-size: 1.7rem;
   padding: 2.5rem 7rem 6.5rem 7rem;
 }
@@ -368,6 +364,7 @@ h4 {
   font-size: 2.25rem;
   font-weight: 500;
   align-self: center;
+  color: #fff;
 }
 
 .operations__icon {
@@ -386,28 +383,30 @@ h4 {
 
 .operations__content p {
   grid-column: 2;
+  color: #fff;
 }
 
 .operations__icon--1 {
-  background-color: #d4cab0;
+  background-color: #fff;
   font-size: 23px;
 }
 .operations__icon--2 {
-  background-color: #d4cab0;
+  background-color: #fff;
   font-size: 23px;
 }
 .operations__icon--3 {
-  background-color: #d4cab0;
+  background-color: #fff;
   font-size: 30px;
 }
 
 /* SIGNUP */
 .section--sign-up {
-  background-color: #37383d;
+  background-color: ;
   border-top: none;
   border-bottom: 1px solid #444;
   text-align: center;
   padding: 10rem 3rem;
+  background: linear-gradient(to bottom right, #071336, #6a6ca0);
 }
 
 .section--sign-up .section__header {
@@ -428,21 +427,64 @@ h4 {
   margin-bottom: 20px;
 }
 
+.search-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.date-input-label {
+  color: #fff;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+#dateInput {
+  padding: 10px;
+  border-radius: 20px;
+  font-size: 20px;
+  border: none;
+  width: 50%;
+  margin-bottom: 10px;
+}
+
+#searchButton {
+  font-size: 20px;
+  padding: 5px 20px;
+  background-color: #fff;
+  color: #202132;
+  border-radius: 20px;
+}
+
+#searchButton:hover {
+  background-color: #d2d3d6;
+  cursor: pointer;
+}
+
 .apod-container {
-  max-width: 600px;
+  max-width: 90%;
   margin: 0 auto;
-  border: 1px solid #ccc;
+  border: 1px solid #fff;
   padding: 20px;
+  opacity: 0;
 }
 
 .apod-title {
-  font-size: 20px;
+  font-size: 35px;
+  margin-bottom: 10px;
+  color: #d2d3d6;
+}
+.apod-info {
+  font-size: 17px;
+  color: #fff;
   margin-bottom: 10px;
 }
 
 .apod-image {
   max-width: 100%;
 }
+
 /* SLIDER */
 .slider {
   max-width: 100rem;
@@ -450,7 +492,7 @@ h4 {
   margin: 0 auto;
   position: relative;
 
-  /* IN THE END */
+  background-color: #363747;
   overflow: hidden;
 }
 
@@ -551,12 +593,13 @@ h4 {
   font-size: 2.25rem;
   font-weight: 500;
   margin-bottom: 1.5rem;
+  color: #fff;
 }
 
 .testimonial__text {
   font-size: 1.7rem;
   margin-bottom: 3.5rem;
-  color: #666;
+  color: #fff;
 }
 
 .testimonial__author {
@@ -570,8 +613,10 @@ h4 {
 
 .testimonial__photo {
   grid-row: 1 / span 2;
-  width: 6.5rem;
+  width: 8rem;
+  height: 8rem;
   border-radius: 50%;
+  object-fit: cover;
 }
 
 .testimonial__name {
@@ -579,10 +624,12 @@ h4 {
   font-weight: 500;
   align-self: end;
   margin: 0;
+  color: #fff;
 }
 
 .testimonial__location {
   font-size: 1.5rem;
+  color: #cccccc;
 }
 
 .section__title--testimonials {
@@ -591,15 +638,16 @@ h4 {
 
 /* FOOTER */
 .footer {
-  padding: 10rem 3rem;
-  background-color: #37383d;
+  padding: 2rem 2rem;
+  background-color: #202132;
+  border-top: 1px solid #fff;
 }
 
 .footer__nav {
   list-style: none;
   display: flex;
   justify-content: center;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 
 .footer__item {
@@ -616,7 +664,7 @@ h4 {
   height: 5rem;
   display: block;
   margin: 0 auto;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 
 .footer__copyright {
@@ -636,7 +684,7 @@ h4 {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 60rem;
-  background-color: #f3f3f3;
+  background-color: #202132;
   padding: 5rem 6rem;
   box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
   z-index: 1000;
@@ -659,6 +707,7 @@ h4 {
   font-size: 3.25rem;
   margin-bottom: 4.5rem;
   line-height: 1.5;
+  color: #fff;
 }
 
 .modal__form {
@@ -672,6 +721,7 @@ h4 {
 .modal__form label {
   font-size: 1.7rem;
   font-weight: 500;
+  color: #fff;
 }
 
 .modal__form input {
@@ -697,6 +747,7 @@ h4 {
   cursor: pointer;
   border: none;
   background: none;
+  color: #fff;
 }
 
 .hidden {
